# GNN_and_Bigdata

./: .gitignore  3e.csv  demo.ipynb  food2.csv  jester_items.csv  jester_ratings.csv  join.ipynb  mydemo.ipynb  pyproject.toml
