[project]
name = "code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "kmeans1d>=0.4.0",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "torch==2.4.*",
    "torch-geometric>=2.6.1",
    "torchaudio==2.4.*",
    "torchvision==0.19.*",
    "tqdm>=4.67.1",
]
